@@ -5,9 +5,8 @@ use Test::More;
 use RPi::WiringPi;
 
 if (! $ENV{PI_BOARD}){
-    warn "\n*** PI_BOARD is not set! ***\n";
     $ENV{NO_BOARD} = 1;
-    plan skip_all => "not on a pi board\n";
+    plan skip_all => "Not on a Pi board\n";
 }
 
 my $pi = RPi::WiringPi->new;
