@@ -10,9 +10,8 @@ use Test::More;
 my $mod = 'RPi::WiringPi';
 
 if (! $ENV{PI_BOARD}){
-    warn "\n*** PI_BOARD is not set! ***\n";
     $ENV{NO_BOARD} = 1;
-    plan skip_all => "not on a pi board\n";
+    plan skip_all => "Not on a Pi board\n";
 }
 
 my $pi = $mod->new(fatal_exit => 0);
