@@ -13,11 +13,13 @@ if ($> == 0){
     $ENV{PI_BOARD} = 1;
 }
 
+if (! $ENV{RPI_ADC}){
+    plan skip_all => "RPI_ADC environment variable not set\n";
+}
+
 if (! $ENV{PI_BOARD}){
-    warn "\n*** PI_BOARD is not set! ***\n";
     $ENV{NO_BOARD} = 1;
-    plan skip_all => "not on a pi board\n";
-    exit;
+    plan skip_all => "Not on a Pi board\n";
 }
 
 if ($> != 0){
