@@ -14,11 +14,9 @@ my $mod = 'RPi::WiringPi';
 if ($> == 0){
     $ENV{PI_BOARD} = 1;
 }
-
 if (! $ENV{PI_BOARD}){
-    warn "\n*** PI_BOARD is not set! ***\n";
     $ENV{NO_BOARD} = 1;
-    plan skip_all => "not on a pi board\n";
+    plan skip_all => "Not on a Pi board\n";
 }
 
 if ($> != 0){
