@@ -7,7 +7,13 @@ use Test::More;
 # RPi::RTC::DS3231 tests
 
 if (! $ENV{RPI_RTC}){
-    plan(skip_all => "Skipping: RPI_RTC environment variable not set");
+    plan(skip_all => "RPI_RTC environment variable not set");
+}
+
+if (! $ENV{PI_BOARD}){
+    $ENV{NO_BOARD} = 1;
+    plan skip_all => "Not on a Pi board\n";
+    exit;
 }
 
 $SIG{__DIE__} = sub {};
