@@ -8,9 +8,9 @@ use Test::More;
 use WiringPi::API qw(:perl);
 
 if (! $ENV{PI_BOARD}){
-    warn "\n*** PI_BOARD is not set! ***\n";
     $ENV{NO_BOARD} = 1;
-    plan skip_all => "not on a pi board\n";
+    plan skip_all => "Not on a Pi board\n";
+    exit;
 }
 
 setup_gpio();
